[gd_scene load_steps=11 format=3 uid="uid://c0pabkbh8cts7"]

[ext_resource type="Theme" uid="uid://c4x43hephx6al" path="res://themes/list_item_panel/list_item_panel_theme.tres" id="1_o51tf"]
[ext_resource type="Script" path="res://scripts/menus/quests_panel/quest_slot_panel.gd" id="2_6ihcm"]
[ext_resource type="Theme" uid="uid://cr8ed0igvvahw" path="res://themes/button_row_theme.tres" id="2_ya8i3"]
[ext_resource type="Texture2D" uid="uid://dvskqb3ejxpyo" path="res://graphics/ui/quest_pin_unpinned.png" id="3_0tc86"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="4_l4ou6"]
[ext_resource type="Texture2D" uid="uid://cb2v3o0a0i0ws" path="res://graphics/ui/quest_pin_pinned.png" id="4_qbidu"]
[ext_resource type="Texture2D" uid="uid://l1mon0vxhkb5" path="res://graphics/ui/sprite_button_focused.png" id="5_dyn82"]
[ext_resource type="Texture2D" uid="uid://bsyoka4kskkib" path="res://graphics/ui/cave_icon.png" id="9_qk0m0"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="9_ukgg4"]
[ext_resource type="PackedScene" uid="uid://dhtlgjfm14evh" path="res://prefabs/ui/texture_sfx_button.tscn" id="10_2votq"]

[node name="QuestSlotPanel" type="Panel" groups=["QuestSlotPanel"]]
custom_minimum_size = Vector2(1120, 76)
offset_right = 1120.0
offset_bottom = 76.0
theme = ExtResource("1_o51tf")
script = ExtResource("2_6ihcm")

[node name="PinButton" parent="." instance=ExtResource("10_2votq")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -24.0
offset_right = 52.0
offset_bottom = 24.0
grow_vertical = 2
focus_neighbor_right = NodePath("../CenterButtons/HBoxContainer/TurnInButton")
toggle_mode = true
texture_normal = ExtResource("3_0tc86")
texture_pressed = ExtResource("4_qbidu")
texture_focused = ExtResource("5_dyn82")
stretch_mode = 0

[node name="CenterQuestName" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 59.0
offset_right = 432.0
grow_vertical = 2
alignment = 1

[node name="QuestName" type="RichTextLabel" parent="CenterQuestName"]
clip_contents = false
layout_mode = 2
theme = ExtResource("4_l4ou6")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
text = "Quest Name Goes Here"
fit_content = true

[node name="QuestStepName" type="RichTextLabel" parent="CenterQuestName"]
clip_contents = false
layout_mode = 2
text = "Quest Step Name Goes Here"
fit_content = true

[node name="CenterProgress" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.384
anchor_right = 0.384
anchor_bottom = 1.0
offset_left = -20.08
offset_right = 389.92
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="QuestProgress" type="RichTextLabel" parent="CenterProgress"]
clip_contents = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16
text = "Defeat 123456789012345! (234 / 567)"
fit_content = true

[node name="CenterButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_right = -20.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterButtons"]
layout_mode = 2
theme = ExtResource("2_ya8i3")
alignment = 2

[node name="MainQuestSpriteControl" type="Control" parent="CenterButtons/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
tooltip_text = "Main Quest"

[node name="MainQuestSprite" type="Sprite2D" parent="CenterButtons/HBoxContainer/MainQuestSpriteControl"]
position = Vector2(24, 25)
scale = Vector2(3, 3)
texture = ExtResource("9_qk0m0")

[node name="TurnInButton" parent="CenterButtons/HBoxContainer" instance=ExtResource("9_ukgg4")]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
focus_neighbor_left = NodePath("../../../PinButton")
text = "Turn In"

[node name="DetailsButton" parent="CenterButtons/HBoxContainer" instance=ExtResource("9_ukgg4")]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
focus_neighbor_left = NodePath("../TurnInButton")
text = "Details"

[connection signal="toggled" from="PinButton" to="." method="_on_pin_button_toggled"]
[connection signal="pressed" from="CenterButtons/HBoxContainer/TurnInButton" to="." method="_on_turn_in_button_pressed"]
[connection signal="pressed" from="CenterButtons/HBoxContainer/DetailsButton" to="." method="_on_details_button_pressed"]
